--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "contributors": [],
   "scripts": {
     "dev": "",
-    "test": ""
+    "start": "nodemon index.js"
   },
   "description": "",
   "dependencies": {
